Frontend group overview